Fix preview layout issue

--- a/resources/assets/sass/layout/_resume-preview.scss
+++ b/resources/assets/sass/layout/_resume-preview.scss
@@ -3,6 +3,7 @@
     margin-bottom: 2rem;
     padding: 1rem;
     width: 100%;
+    position: relative;
 }
 
 .resume-preview {
